# dimos_utils

./: README.md  demo_bridge.sh  lcm-gen  pyproject.toml  ros_lcm_bridge.py  test_lcm_publisher.py  test_ros_publisher.py
assets/: README_FORCE_TORQUE_CALIBRATION.md  calc_calibration_matrix.py  convert_stl_to_obj.py  drake_openft_test.py  force_torque_visualizer.py  openft_calibration_20250813_104335.csv  xarm6_openft_gripper.urdf  xarm_devkit_base_descr.urdf  xarm_devkit_base_descr_stl.urdf
lcm_files/: actionlib_msgs_GoalStatus.lcm  actionlib_msgs_GoalStatusArray.lcm  diagnostic_msgs_DiagnosticArray.lcm  diagnostic_msgs_DiagnosticStatus.lcm  foxglove_msgs_LinePrimitive.lcm  foxglove_msgs_LocationFix.lcm  foxglove_msgs_Log.lcm  foxglove_msgs_PackedElementField.lcm  foxglove_msgs_PointsAnnotation.lcm  foxglove_msgs_SceneEntityDeletion.lcm  geometry_msgs_Accel.lcm  geometry_msgs_AccelStamped.lcm  geometry_msgs_AccelWithCovariance.lcm  geometry_msgs_AccelWithCovarianceStamped.lcm  geometry_msgs_InertiaStamped.lcm  geometry_msgs_PointStamped.lcm  geometry_msgs_Polygon.lcm  geometry_msgs_PolygonStamped.lcm  geometry_msgs_Pose.lcm  geometry_msgs_PoseArray.lcm  geometry_msgs_PoseStamped.lcm  geometry_msgs_PoseWithCovariance.lcm  geometry_msgs_PoseWithCovarianceStamped.lcm  geometry_msgs_QuaternionStamped.lcm  geometry_msgs_Transform.lcm  geometry_msgs_TransformStamped.lcm  geometry_msgs_Twist.lcm  geometry_msgs_TwistStamped.lcm  geometry_msgs_TwistWithCovariance.lcm  geometry_msgs_TwistWithCovarianceStamped.lcm  geometry_msgs_Vector3Stamped.lcm  geometry_msgs_Wrench.lcm  (+44 more)
(+190 files in other folders)
